-----------
New in 0.10
-----------
Cpu clock raised when loading manuals
Added support for bmp and jpg/jpeg files for manuals
Added preview of images when selecting icons

----------
New in 0.9
----------
Added gamma setting (global and per-link)
Added option to tweak ram timings
Added skins support
Added link to activate tv-out
Added support for multiple wallpapers
Color of message dialogs changeable by skins
Automatic icon association for links with icons found in the skin "icons" directory
Adding a link to a file without gpu or gpe extension automatically enables the wrapper feature
Added support for translations (Italian, Danish, Dutch, Spanish, German, French, Finnish, Portuguese, Swedish, Slovak, Norwegian and Russian included)
Use of a new font code which supports (some) utf8 characters
Added graphics for gp2x buttons
Moved screenshot in the selector under the text
[selFullPath] is automatically added at the end of the params when using the selector and no [marker] is specified
Easier access to the last row of links
Moved manual indicator to the bottom bar
Save screenshot with A+L+R (only on the main screen)
SD corruption when using USB on certain setups should be fixed
Fixed half tv-out screen
Fixed flickering in various locations
Fixed bugs in the manuals navigation system
Other small changes

------------
New in 0.8.1
------------
Fixed crash on section creation.
Fixed moving links between sections.
Fixed creating links in the first section.
Fixed alpha support for font.png

----------
New in 0.8
----------
Added support for game manuals (.man.png, .man.txt or readmes)
Implemented link's output logs with a log viewer (Disabled by default)
Implemented a simple text reader used in various situations
Implemented volume control (per-link and globally)
Added some confirmation dialogs
Changed cancel button from A to X
Added link to mount nand on usb with a dialog notification if usb is used for networking