@@ -1,4 +1,3 @@
 title=ladykiller
-icon=/mnt/sd/ladykiller/ladykill.png
 exec=/mnt/sd/ladykiller/ladykiller.gpe
 clock=200
